@@ -60,7 +60,7 @@
   <property name="test.classpath.id" value="test.classpath"/>
   <property name="test.output" value="true"/>
   <property name="test.timeout" value="900000"/>
-  <property name="test.junit.output.format" value="plain"/>
+  <property name="test.junit.output.format" value="xml"/>
   <property name="test.junit.output.usefile" value="true"/>
 
   <path id="test.classpath">
